--- a/.github/workflows/snake-animation.yml
+++ b/.github/workflows/snake-animation.yml
@@ -2,6 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
+    # Runs every 12 hours
     - cron: "0 */12 * * *"
   workflow_dispatch:
 
@@ -11,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: Platane/snk@v3
         with:
